Some fixes, added unit tests for the InitializationViewModel and code refactoring.